[package]
name = "udc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = { version = "4.2.2", features = ["derive"] }
serde = { version = "1.0.160", features = ["derive"] }
toml = "0.7.3"

[dev-dependencies]
serde_test = "1.0.160"
